refactor: object creation in separate package
